small fixes + visible how many tiles left

--- a/style.css
+++ b/style.css
@@ -289,6 +289,11 @@ body .tile {
   font-size: small;
 }
 
+.tilesLeft{
+  font-family: 'Open Sans', sans-serif;
+  font-size: small;
+}
+
 .topPlayers{
     font-family: 'Open Sans', sans-serif;
   font-size: 30px;
